# cmake-sfml-project

./: CLAUDE.md  CMakeLists.txt  run.sh
src/: main.cpp
